--- a/add/package.json
+++ b/add/package.json
@@ -1,5 +1,6 @@
 {
   "name": "add",
+  "type": "module",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
@@ -10,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.1.3",
     "express": "^4.17.1",
     "fs": "^0.0.1-security",
     "geojson": "^0.5.0"
